[kaleidescape] Implement new protocol features
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>